[gd_scene load_steps=3 format=3 uid="uid://bm243lw37y02j"]

[ext_resource type="Script" path="res://UI/Main Menu/main_menu.gd" id="1_6268k"]
[ext_resource type="Texture2D" uid="uid://de1dpis8g54fg" path="res://icon.svg" id="2_fk1kw"]

[node name="MainMenu" type="Control" groups=["Options Menu Incompatible", "Singleplayer Start Menu Incompatible"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6268k")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.866111, 0.866111, 0.866111, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VSplitContainer" type="VSplitContainer" parent="MarginContainer"]
layout_mode = 2
dragger_visibility = 1

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VSplitContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VSplitContainer/CenterContainer"]
layout_mode = 2
texture = ExtResource("2_fk1kw")
stretch_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VSplitContainer"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VSplitContainer/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 120)
layout_mode = 2

[node name="SingleplayerModeButton" type="Button" parent="MarginContainer/VSplitContainer/VBoxContainer"]
custom_minimum_size = Vector2(170, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Play with Bots"

[node name="MultiplayerModeButton" type="Button" parent="MarginContainer/VSplitContainer/VBoxContainer"]
custom_minimum_size = Vector2(170, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Play with Others!"

[node name="OptionsButton" type="Button" parent="MarginContainer/VSplitContainer/VBoxContainer"]
custom_minimum_size = Vector2(170, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Options"

[node name="ExitButton" type="Button" parent="MarginContainer/VSplitContainer/VBoxContainer"]
custom_minimum_size = Vector2(170, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Exit Game"

[connection signal="pressed" from="MarginContainer/VSplitContainer/VBoxContainer/SingleplayerModeButton" to="." method="_on_singleplayer_mode_button_pressed"]
[connection signal="pressed" from="MarginContainer/VSplitContainer/VBoxContainer/MultiplayerModeButton" to="." method="_on_multiplayer_mode_button_pressed"]
[connection signal="pressed" from="MarginContainer/VSplitContainer/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="MarginContainer/VSplitContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
